@@ -2860,9 +2860,6 @@ gdk_export void ALIGNsetH(BAT *b1, BAT *b2);
  * @item HASHloopvar
  * @tab
  *  (BAT *b; Hash *h, size_t idx; ptr value, BUN w)
- * @item SORTloop
- * @tab
- *  (BAT *b,p,q,tl,th,s)
  * @end multitable
  *
  * The @emph{BATloop()} looks like a function call, but is actually a
@@ -2988,25 +2985,6 @@ gdk_export void ALIGNsetH(BAT *b1, BAT *b2);
 #endif
 #define HASHloop_flt(bi, h, hb, v)	HASHloop_TYPE(bi, h, hb, v, flt)
 #define HASHloop_dbl(bi, h, hb, v)	HASHloop_TYPE(bi, h, hb, v, dbl)
-
-/*
- * @- loop over a BAT with ordered tail
- * Here we loop over a BAT with an ordered tail column. Again, 'p' and
- * 'q' are iteration variables, where 'p' points at the current
- * BUN. 'tl' and 'th' are pointers to atom corresponding to the
- * minimum (included) and maximum (included) bound in the selected
- * range of BUNs. A nil-value means that there is no bound.  The 's'
- * finally is an integer denoting the bunsize, used for speed.
- */
-#define SORTloop(b, p, q, tl, th)					\
-	if (!BATtordered(b))						\
-		GDKerror("SORTloop: BAT not sorted.\n");		\
-	else for (p = (ATOMcmp((b)->ttype, tl, ATOMnilptr((b)->ttype)) ? \
-		       SORTfndfirst((b), tl) : BUNfirst(b)),		\
-		  q = (ATOMcmp((b)->ttype, th, ATOMnilptr((b)->ttype)) ? \
-		       SORTfndlast((b), th) : BUNlast(b));		\
-		  p < q;						\
-		  p++)
 
 /*
  * @+ Common BAT Operations
